<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OnboardingFragment5">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onboarding5_title"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:letterSpacing="0.02"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/payment_icon"
        android:src="@drawable/payment_method"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding5_description"
            android:textSize="16sp"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="40dp"
            android:letterSpacing="0.02"/>
    </LinearLayout>


</FrameLayout>